--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -1,11 +1,26 @@
 formatter: markdown table
 
+header-from: main.tf
+footer-from: docs/.footer.md
+
+content: |-
+  {{ .Header }}
+  {{ include "docs/.addon.md" }}
+  {{ .Requirements }}
+  {{ .Providers }}
+  {{ .Modules }}
+  {{ .Resources }}
+  {{ include "docs/.inputs.md" }}
+  {{ .Inputs }}
+  {{ .Outputs }}
+  {{ .Footer }}
+
 output:
-  mode: inject
+  file: README.md
+  mode: replace
   template: |-
-    <!-- BEGINNING OF PRE-COMMIT-TERRAFORM DOCS HOOK -->
     {{ .Content }}
-    <!-- END OF PRE-COMMIT-TERRAFORM DOCS HOOK -->
+    {{- printf "\n" -}}
 
 sections:
   hide:
@@ -13,3 +28,7 @@ sections:
 
 sort:
   by: required
+
+settings:
+  default: false
+  required: false
